# transputer-emulator

./: .gitignore  .hgignore  .hgtags  CMakeLists.googletest.txt  CMakeLists.txt  Makefile  README-pico.md  README.md  README.txt  TODO.md  build.conf  build.sh  full-desktop-build.sh  full-pico-build.sh  install-linux.sh  install-macosx.sh  patch-for-macos.sh  pom.xml  rl.py  sanitizers.cmake
EmuServer/: CMakeLists.txt  emuserver.cpp
Emulator/: CMakeLists.txt  Makefile  boot.cpp  boot.h  call-notes.txt  cpu.cpp  cpu.h  disasm.cpp  disasm.h  flags.h  main.cpp  memory.cpp  memory.h  myindent.sh  opcodes.h  reportopcodes.pl  symbol.cpp  symbol.h  temulate.cpp  testboot.cpp
IServer/: isproto.h
IServer/client/: iclient.c  iclient.h
IServer/client-examples/: callret.asm  callret.lst  macros.asm
IServer/client-examples/hello/: hello.asm
IServer/client-examples/hello-world-iserver/: build.sh  emulate.sh  hello.asm
IServer/client-examples/hello-world-iserver-rom/: build.sh  emulate.sh  hello.asm  serve.sh
IServer/client-examples/hello-world-secondary-iserver/: hello.asm  serve.sh
IServer/client-examples/hello2/: boot-hello2.sh
IServer/client-examples/hello3/: boot-hello3.sh  hello3.asm  hello3.lst  make-hello3.sh
IServer/server/: CMakeLists.txt  bootfile.t800  fileio.cpp  fileio.h  framecodec.cpp  framecodec.h  iserver.cpp  iservershared.cpp  iservershared.h  memstreambuf.h  platform.cpp  platform.h  platformfactory.cpp  platformfactory.h  posixplatform.cpp  posixplatform.h  protocolhandler.cpp  protocolhandler.h  testframecodec.cpp  testplatform.cpp  testprotocol.cpp  testprotocolhandler.cpp  windowsplatform.cpp  windowsplatform.h
NodeServer/: CMakeLists.txt  Makefile  nsproto.h
NodeServer/client/: CMakeLists.txt  Makefile  backup.cpp  hello.asm  nodeclient.c  nodeclient.cpp  nodeclient.h  nodeclient.s
NodeServer/client-examples/: boot-hello2.sh  callretrom.asm  callretrom.lst  hello2.asm  hello2.lst  hello2.out  hello2x.lst  make-hello2.sh
NodeServer/client-examples/hello2/: boot-hello2.sh  hello2.asm  hello2.lst
NodeServer/server/: CMakeLists.txt  Makefile  console.cpp  console.h  consolefactory.cpp  consolefactory.h  nodeserver.cpp  platform.cpp  platform.h  platformfactory.cpp  platformfactory.h  posixplatform.cpp  posixplatform.h  proba  termioconsole.cpp  termioconsole.h  windowsconsole.cpp  windowsconsole.h  windowsplatform.cpp  windowsplatform.h
Notes/: AsyncLinkDesign.md  Notes on Links.odt  README.md  asynclink.asta
Notes/libxputer-compiled/: Makefile  README  README.koi8  alt.c  alt.s  misc.c  misc.s  process.c  process.s  sema.c  sema.s  xputer.h
Pico/: CMakeLists.txt  cdc_app.c  debouncer.cpp  debouncer.h  getline.cpp  getline.h  picolinkadapter.cpp  picolinkharness.cpp  picolinkreflect.cpp
PicoShared/: CMakeLists.txt  picousbseriallink.cpp
PicoStdio/: CMakeLists.txt  logpicostdio.cpp
PicoUSBCDC/: CMakeLists.txt  cdc_app.c  cdc_app.cpp  cdc_app.h  logpicousbcdc.cpp  picousbseriallink.cpp  picousbseriallink.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
Scripts/: tserve.ps1  tserve.sh
Shared/: CMakeLists.txt  Makefile  asynclink.cpp  asynclink.h  cdc_app.c  cdc_app.h  commlink.cpp  commlink.h  constants.h  debouncer.cpp  debouncer.h  emuquery.h  exceptionfixture.h  fifolink.cpp  fifolink.h  filesystem.cpp  filesystem.h  getline.cpp  gpioasynclink.cpp  gpioasynclink.h  hexdump.cpp  hexdump.h  inmemorylink.cpp  inmemorylink.h  link.cpp  link.h  linkfactory.cpp  linkfactory.h  log.cpp  log.h  logbase.cpp  logbase.h  logdesktop.cpp  logpicostdio.cpp  logpicousbcdc.cpp  memloc.h  misc.cpp  misc.h  namedpipelink.cpp  namedpipelink.h  (+36 more)
src/main/assembly/: linux-distribution.xml  macos-distribution.xml  macosx-distribution.xml  pi-pico-distribution.xml  posix-distribution.xml  windows-distribution.xml
src/main/resources/: CMakeLists.txt  version.cpp  version.h
