include_directories(../Shared)
include_directories(../target/classes)
link_libraries(parachutedev)
link_libraries(parachuteversion)
add_executable(temulate main.cpp memory.cpp cpu.cpp disasm.cpp symbol.cpp opcodes.h)

if(PICO)
  target_link_libraries(temulate pico_stdlib parachutepicousbcdc)
  pico_add_extra_outputs(temulate)
else()
  target_link_libraries(temulate parachutedesktop)
endif(PICO)
